# reqcraft

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  dsl-design.md  install.sh  release.toml
.github/workflows/: ci.yml  release.yml
example/socketio-server/: package-lock.json  package.json
extensions/reqcraft-vscode/: .gitignore  .vscodeignore  LICENSE.md  README.md  language-configuration.json  package-lock.json  package.json
extensions/reqcraft-vscode/snippets/: rqc.json
extensions/reqcraft-vscode/src/: extension.ts
extensions/reqcraft-vscode/syntaxes/: rqc.tmLanguage.json
src/: cli.rs  main.rs  openapi.rs  parser.rs  web.rs
src/parser/: ast.rs  lexer.rs
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  index.css  main.tsx
web-ui/src/components/: CategoryDetailPage.tsx  CommandPalette.tsx  RequestBuilder.tsx  RequestTabs.tsx  ResponsePanel.tsx  SchemaPanel.tsx  Sidebar.tsx  VariablesPage.tsx  WelcomePage.tsx
web-ui/src/store/: useWebSocketStore.ts
web-ui/src/utils/: schema.ts  variables.ts
