[package]
name = "reqcraft"
version = "0.4.3"
edition = "2021"
authors = ["moonrailgun"]
description = "A powerful API testing tool powered by DSL configuration"
repository = "https://github.com/moonrailgun/reqcraft"
homepage = "https://github.com/moonrailgun/reqcraft"
license = "MIT"
readme = "README.md"
keywords = ["api", "testing", "http", "rest", "mock"]
categories = ["command-line-utilities", "development-tools", "web-programming"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Web server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Embedded assets (without debug-embed, debug mode reads from filesystem)
rust-embed = "8"
mime_guess = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client (blocking for OpenAPI import, async default for CORS proxy)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }

# URL encoding
urlencoding = "2"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
